fixed oddball behaviors and squashed invalid assumptions.

--- a/plugins-client/ext.splitview/splitview.css
+++ b/plugins-client/ext.splitview/splitview.css
@@ -1,8 +1,9 @@
 .editor_tab .btnsesssioncontainer div.curbtn.splitview_active .tab_middle {
+    color: #036A07;
+    text-shadow: rgba(255, 255, 255, .71) 0px 1px 0px !important;
 }
 
 .editor_tab .btnsesssioncontainer div.curbtn.splitview_inactive .tab_middle {
-
 }
 
 .editor_tab .btnsesssioncontainer div.curbtn.splitview_nplus1 .tab_middle:before {
